--- a/storage/themes/boulevard/css/fonts/default.css
+++ b/storage/themes/boulevard/css/fonts/default.css
@@ -1,4 +1,6 @@
 @import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400italic,600,700);
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css);
+
 
 body {
 	font-family: 'Source Sans Pro', Arial, sans-serif;
